<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="45dp">

    <TextView
        android:id="@+id/export_item_level"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/level"
        android:textSize="13sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/export_item_type" />

    <TextView
        android:id="@+id/export_item_type"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/type"
        android:textSize="13sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/export_item_level"
        app:layout_constraintRight_toLeftOf="@id/export_import_item_date" />

    <TextView
        android:id="@+id/export_import_item_date"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/import_date"
        android:textSize="13sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/export_item_type"
        app:layout_constraintRight_toLeftOf="@id/export_export_date" />

    <TextView
        android:id="@+id/export_export_date"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/export_date"
        android:textSize="13sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/export_import_item_date"
        app:layout_constraintRight_toLeftOf="@id/export_import_item_price" />

    <TextView
        android:id="@+id/export_import_item_price"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/import_price"
        android:textSize="13sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/export_export_date"
        app:layout_constraintRight_toLeftOf="@id/export_export_item_price" />

    <TextView
        android:id="@+id/export_export_item_price"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/export_price"
        android:textSize="13sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/export_import_item_price"
        app:layout_constraintRight_toLeftOf="@id/export_export_item_number" />

    <TextView
        android:id="@+id/export_export_item_number"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/export_price"
        android:textSize="13sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/export_export_item_price"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>