<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_export_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/export_price"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_export_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@id/tv_export_price"
        app:layout_constraintLeft_toRightOf="@id/tv_export_price"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".3" />


    <TextView
        android:id="@+id/tv_import_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/export_num"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_export_price" />

    <EditText
        android:id="@+id/et_export_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@id/tv_import_number"
        app:layout_constraintLeft_toRightOf="@id/tv_import_number"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".3" />


    <TextView
        android:id="@+id/tv_import_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/export_date"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_import_number" />

    <TextView
        android:id="@+id/et_export_date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/tv_import_date"
        app:layout_constraintLeft_toRightOf="@id/tv_import_date"
        app:layout_constraintTop_toTopOf="@id/tv_import_date"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".3" />

    <Button
        android:id="@+id/export_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/export_cancel" />

    <Button
        android:id="@+id/export_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/export_confirm"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>